versioned_docs/version-6.5.0/api/squareGrid.mdx
---
title: squareGrid
---

import * as turf from "turf-6";
import ExampleMap from "@site/src/components/ExampleMap";
import WindowTurfGlobal from "@site/src/components/WindowTurfGlobal";
import BrowserOnly from "@docusaurus/BrowserOnly";

<!-- Expose turf as global var for experimenting in the browser console -->

<BrowserOnly>{() => <WindowTurfGlobal turf={turf} />}</BrowserOnly>

### Description

Creates a square grid from a bounding box.

### Parameters

| Name                       | Type                                                                                                                                                                                               | Description                                                                                          |
| -------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------- |
| bbox                       | **Array\<number>**                                                                                                                                                                                 | extent in [minX, minY, maxX, maxY] order                                                             |
| cellSide                   | **number**                                                                                                                                                                                         | of each cell, in units                                                                               |
| options<i>?</i>            | **Object**                                                                                                                                                                                         | Optional parameters _(default \{})_                                                                  |
| options.units<i>?</i>      | **string**                                                                                                                                                                                         | used in calculating cellSide, can be degrees, radians, miles, or kilometers _(default 'kilometers')_ |
| options.mask<i>?</i>       | **[Feature](https://tools.ietf.org/html/rfc7946#section-3.2)\<[Polygon](https://tools.ietf.org/html/rfc7946#section-3.1.6) \| [MultiPolygon](https://tools.ietf.org/html/rfc7946#section-3.1.7)>** | if passed a Polygon or MultiPolygon, the grid Points will be created only inside it                  |
| options.properties<i>?</i> | **Object**                                                                                                                                                                                         | passed to each point of the grid _(default \{})_                                                     |

### Returns

<ul>
  **[FeatureCollection](https://tools.ietf.org/html/rfc7946#section-3.3)\<[Polygon](https://tools.ietf.org/html/rfc7946#section-3.1.6)>** grid a grid of polygons

</ul>

### Examples

```javascript
var bbox = [-95, 30, -85, 40];
var cellSide = 50;
var options = { units: "miles" };

var squareGrid = turf.squareGrid(bbox, cellSide, options);
```

export function Map0() {
  "use strict";

  // jsdoc example start
  var bbox = [-95, 30, -85, 40];
  var cellSide = 50;
  var options = { units: "miles" };

  var squareGrid = turf.squareGrid(bbox, cellSide, options);

  //addToMap
  var addToMap = { squareGrid };
  // jsdoc example end

  return <ExampleMap addToMap={addToMap} />;
}

<!-- prettier-ignore -->
<BrowserOnly>{() => <Map0 />}</BrowserOnly>

### Installation

```javascript
$ npm install @turf/square-grid

import { squareGrid } from "@turf/square-grid";
const result = squareGrid(...);
```

```javascript
$ npm install @turf/turf

import * as turf from "@turf/turf";
const result = turf.squareGrid(...);
```
