versioned_docs/version-7.1.0/api/squareGrid.mdx
---
title: squareGrid
---

import * as turf from "turf-next";
import ExampleMap from "@site/src/components/ExampleMap";
import WindowTurfGlobal from "@site/src/components/WindowTurfGlobal";
import BrowserOnly from "@docusaurus/BrowserOnly";

<!-- Expose turf as global var for experimenting in the browser console -->

<BrowserOnly>{() => <WindowTurfGlobal turf={turf} />}</BrowserOnly>

### Description

Creates a grid of square polygons with cell length consistent in degrees

### Parameters

| Name                       | Type                                                                                                                                                                                                | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| -------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| bbox                       | **[BBox](https://tools.ietf.org/html/rfc7946#section-5)**                                                                                                                                           | extent of grid in [minX, minY, maxX, maxY] order. If the grid does not fill the bbox perfectly, it is centered.                                                                                                                                                                                                                                                                                                                                                         |
| cellSide                   | **number**                                                                                                                                                                                          | length of each cell side.                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| options<i>?</i>            | **Object**                                                                                                                                                                                          | Optional parameters _(default \{\})_                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| options.units<i>?</i>      | **Units**                                                                                                                                                                                           | the units of the cellSide value. Supports all valid Turf \{@link https://github.com/Turfjs/turf/blob/master/packages/turf-helpers/README_UNITS.md Units\}. If you are looking for squares with sides of equal lengths in linear units (e.g. kilometers) this is not the module for you. The cellSide is converted from units provided to degrees internally, so the width and height of resulting polygons will be consistent only in degrees. _(default 'kilometers')_ |
| options.mask<i>?</i>       | **[Feature](https://tools.ietf.org/html/rfc7946#section-3.2)\<[Polygon](https://tools.ietf.org/html/rfc7946#section-3.1.6) \| [MultiPolygon](https://tools.ietf.org/html/rfc7946#section-3.1.7)\>** | if passed a Polygon or MultiPolygon, the grid Points will be created only inside it                                                                                                                                                                                                                                                                                                                                                                                     |
| options.properties<i>?</i> | **Object**                                                                                                                                                                                          | passed to each point of the grid _(default \{\})_                                                                                                                                                                                                                                                                                                                                                                                                                       |

### Returns

<ul>
  **[FeatureCollection](https://tools.ietf.org/html/rfc7946#section-3.3)\<[Polygon](https://tools.ietf.org/html/rfc7946#section-3.1.6)\>** a grid of polygons with equal width and height in degrees.

</ul>

### Examples

```javascript
var bbox = [-95, 30, -85, 40];
var cellSide = 50;
var options = { units: "miles" };

var squareGrid = turf.squareGrid(bbox, cellSide, options);
```

export function Map0() {
  "use strict";

  // jsdoc example start
  var bbox = [-95, 30, -85, 40];
  var cellSide = 50;
  var options = { units: "miles" };

  var squareGrid = turf.squareGrid(bbox, cellSide, options);

  //addToMap
  var addToMap = { squareGrid };
  // jsdoc example end

  return <ExampleMap addToMap={addToMap} />;
}

<!-- prettier-ignore -->
<BrowserOnly>{() => <Map0 />}</BrowserOnly>

### Installation

```javascript
$ npm install @turf/square-grid

import { squareGrid } from "@turf/square-grid";
const result = squareGrid(...);
```

```javascript
$ npm install @turf/turf

import * as turf from "@turf/turf";
const result = turf.squareGrid(...);
```
